# claude-code-archiver

./: .gitignore  Makefile  README.md  debug_detector.py  final_test.py  generate_viewer.py  pyproject.toml  pyrightconfig.json  ruff.toml  run_archiver_test.py  test_continuation_bug2.py  trace_bug.py
.claude/: settings.json
.claude/agents/: claude-files-analyzer.md
ai_working/: SelfServe_analysis.md  amplifier_analysis.md  claude-code-archiver_analysis.md  conversation_analysis_findings.md  enhancement-plan.md  project_analysis_index.md  project_improvement_recommendations.md  recipe-tool_analysis.md  viewer-ux-improvement-plan.md
docs/: README.md  SCHEMA_ANALYSIS.md  claude-code-archiver.md  claude-code-ui-conventions.md  claude-file-relationships.md  claude-jsonl-schema.md  consolidated-findings-update.md  conversation-reconstruction-analysis.md  git-usage-patterns.md  hook-patterns.md  mcp-integration-patterns.md  message-structure-complexity.md  subagent-and-sidechain-patterns.md  viewer-ui-improvements-analysis.md  worktree-sdk-patterns.md
docs/examples/: README.md  claude-code-archiver-project.md  example-recipe-tool-project.md  example-selfserve-project.md  example-semantic-workbench-project.md  example-viber-project.md
phase1-test/: manifest.json  viewer.html
phase1-test/conversations/: 30ea3608-ac58-4466-9f4f-417b13bb3644.jsonl  31d4b01b-d370-4930-ba82-915b98c50266.jsonl  4f4b9f65-dc65-4b46-8a10-023413bfa847.jsonl  51553098-9383-4df2-ac06-a687062987f0.jsonl  (+11 more)
tests/: __init__.py  conftest.py  test_cache.py  test_discovery.py  test_sanitizer.py
(+19 files in other folders)
